update sbt